<resources>
    <string name="app_name">RoomInn</string>
    <string name="app_description">The most have app for roomies</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname*</string>
    <string name="emailsu">Email*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="sign_up">Sign Up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="service_name">Name</string>
    <string name="of_the_month">/ of the Month</string>
    <string name="save">Save</string>
    <string name="password2">Password*</string>
    <string name="welcome_message">Welcome to Room-Inn, we will help you with your roomies expenses.</string>
    <string name="service_icon">Icon</string>
    <string name="cost">Cost</string>
    <string name="payment_due">Payment due**</string>
</resources>
