<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/colorIcons"
        android:textSize="@dimen/principalText" />


    <TextView
        android:textColor="@color/colorIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="@dimen/secundaryText"
        android:textAlignment="center"
        />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="120dp"
        android:layout_height="120dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_defaultuser"
            android:layout_marginBottom="15dp" />

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="fitEnd"
            android:layout_gravity="right|bottom"
            android:src="@android:drawable/ic_menu_camera"
            android:background="@android:color/transparent"
            />
    </android.support.design.widget.CoordinatorLayout>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/widthCard"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorIcons"
        android:layout_marginLeft="@dimen/login_pading"
        android:layout_marginRight="@dimen/login_pading"
        android:layout_marginBottom="1dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
            android:padding="@dimen/loginTextPading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fullname"
            android:textColorHint="@color/colorSecondaryText"
            android:background="@color/colorIcons"/>

        <EditText
            android:padding="@dimen/loginTextPading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/emailsu"
            android:textColorHint="@color/colorSecondaryText"
            android:background="@color/colorIcons"/>

            <EditText
                android:padding="@dimen/loginTextPading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password2"
                android:layout_marginTop="1dp"
                android:inputType="textPassword"
                android:textColorHint="@color/colorSecondaryText"
                android:background="@color/colorIcons"/>

        <EditText
            android:padding="@dimen/loginTextPading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:textColorHint="@color/colorSecondaryText"
            android:background="@color/colorIcons"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="35dp"
        android:background="@color/colorIcons"
        android:layout_marginBottom="@dimen/login_pading"/>

</LinearLayout>