<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="@dimen/login_pading" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Room-in"
        android:textSize="@dimen/principalText"
        android:textColor="@color/colorIcons"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textColor="@color/colorIcons"
        android:textSize="@dimen/secundaryText"
        android:layout_marginBottom="@dimen/login_pading"/>


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/widthCard"
        android:layout_height="@dimen/heightCard"
        android:layout_gravity="center"
        android:background="@color/colorIcons"
        android:layout_marginLeft="@dimen/login_pading"
        android:layout_marginRight="@dimen/login_pading"
        android:layout_marginBottom="1dp">

        <EditText
            android:padding="@dimen/loginTextPading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textColorHint="@color/colorSecondaryText"
            android:background="@color/colorIcons"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/widthCard"
        android:layout_height="@dimen/heightCard"
        android:layout_gravity="center"
        android:background="@color/colorIcons"
        android:layout_marginLeft="@dimen/login_pading"
        android:layout_marginRight="@dimen/login_pading">

        <EditText
            android:padding="@dimen/loginTextPading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:textColorHint="@color/colorSecondaryText"
            android:background="@color/colorIcons"/>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/login_pading"
        android:background="@color/colorIcons"
        android:layout_marginBottom="@dimen/login_pading"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_launcher_round" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/login_pading"
            android:src="@mipmap/ic_launcher_round" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_pading"
        android:textColor="@color/colorPrimaryLight"
        android:text="DON'T HAVE AN ACCOUNT, SIGN UP!"/>

</LinearLayout>